# test_bees

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
tests/UI/: behave.ini
tests/UI/features/: account.feature  deposits.feature  environment.py  inventories.feature  items.feature
tests/UI/features/steps/: account.py  inventories.py  login.py  steps.py
tests/UI/helpers/: models.py
tests/UI/pages/: __init__.py  deposits.py  home.py  inventories.py  items.py  login.py  page_element.py
tests/UI2/: test_login.py
tests/UI2/page_objects/: pages.py
tests/integration/: behave.ini
tests/integration/features/: deposits.feature  environment.py  inventories.feature  items.feature
tests/integration/features/steps/: deposits.py  inventories.py  items.py  steps.py
tests/integration/helpers/: fakes.py  tools.py
tests/integration/modules/: deposits.py  inventories.py  items.py
