[tool.poetry]
name = "test_bees"
version = "0.1.0"
description = ""
authors = ["Ralph Ribeiro <ralph_ribeiro@msn.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
behave = "^1.2.6"
ipdb = "^0.13.9"
selenium = "^4.3.0"
page-objects = "^1.1.0"
Faker = "^13.15.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
